lang/tests/contract/sol/ui/fail/01-vec-tuple-return.stderr
error[E0277]: the trait bound `(bool, i32): You_Should_Use_An_Valid_Element_Type` is not satisfied
  --> $DIR/01-vec-tuple-return.rs:16:33
   |
16 |         pub fn noop_1(&self) -> Vec<(bool, i32)> {
   |                                 ^^^^^^^^^^^^^^^^ the trait `You_Should_Use_An_Valid_Element_Type` is not implemented for `(bool, i32)`
   |
   = note: required because of the requirements on the impl of `You_Should_Use_An_Valid_Return_Type` for `std::vec::Vec<(bool, i32)>`
